--- a/JWDataTrackerWeb/src/app/pages/mid-week-schedule/mid-week-schedule.component.html
+++ b/JWDataTrackerWeb/src/app/pages/mid-week-schedule/mid-week-schedule.component.html
@@ -18,7 +18,7 @@
     <div class="row">
         <div class="col-12">
             <kendo-datapager
-                [total]="schedules.totalCount"
+                [total]="schedules.total"
                 [pageSize]="pageSize"
                 [skip]="skip"
                 (pageChange)="pageChange($event)"
